# cmake_sample_project

./: .gitignore  README.md
src/: CMakeLists.txt
src/mymath/: CMakeLists.txt  MyMath.cpp  MyMath.h
src/theapp/: CMakeLists.txt  main.cpp
